--- a/Pharmaceutical.html
+++ b/Pharmaceutical.html
@@ -796,17 +796,17 @@
           <ul class="footer-links">
             <li>
               <a href="#"
-                ><i class="fas fa-map-marker-alt"></i> 123 Green St, Eco City</a
+                ><i class="fas fa-map-marker-alt"></i> No: 547 Kreedapitiya Mavatha. Tewatte Road, Ragama 11010, Sri Lanka</a
               >
             </li>
             <li>
               <a href="mailto:hello@greensite.com"
-                ><i class="fas fa-envelope"></i> hello@greensite.com</a
+                ><i class="fas fa-envelope">tharaka@bernatali.com</i></a
               >
             </li>
             <li>
               <a href="tel:+1234567890"
-                ><i class="fas fa-phone"></i> +1 (234) 567-890</a
+                ><i class="fas fa-phone"></i> +94 77 180 4337</a
               >
             </li>
           </ul>
