--- a/Analytical.html
+++ b/Analytical.html
@@ -431,7 +431,7 @@
           font-size: 0.9rem;
         }
       }
-      * WhatsApp Icon Styles */
+      /* WhatsApp Icon Styles */
       .whatsapp-icon {
         position: absolute;
         top: 25px;
