--- a/Medical.html
+++ b/Medical.html
@@ -867,10 +867,11 @@
             </li>
             <li>
               
-              </a>
             </li>
             <li>
-              
+              <a href="tel:+1234567890">
+                <i class="fas fa-phone"></i> +94 77 180 4337
+              </a>
             </li>
           </ul>
         </div>
