--- a/Testing.html
+++ b/Testing.html
@@ -882,10 +882,11 @@
             </li>
             <li>
               
-              </a>
             </li>
             <li>
-              
+              <a href="tel:+1234567890">
+                <i class="fas fa-phone"></i> +94 77 180 4337
+              </a>
             </li>
           </ul>
         </div>
