--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@
             </div>
             <div class="product-circle">
               <div class="circle-content">
-                <span class="product-name">medical Equipment</span>
+                <span class="product-name">Medical Equipment</span>
               </div>
             </div>
           </div>
