--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,7 @@
               <li><a href="Pharmaceutical.html">Pharmaceutical Tools</a></li>
               <li><a href="Petroleum.html">Petroleum Equipment</a></li>
               <li><a href="Testing.html">Testing Equipment</a></li>
+               <li><a href="Chemical & Consumables.html">Chemical & Consumables</a></li>
             </ul>
           </li>
           <li><a href="#careers">About Us</a></li>
@@ -1364,54 +1365,333 @@
     </script>
 
     <!-- Our Products Section - Two Row Layout with Background -->
-    <section id="products" class="products-two-row-style">
-      <div class="section-container">
-        <div class="lab-products-header">
-          <h2>LABORATORY</h2>
-          <h3>MULTESTING TOWNSTATE</h3>
-        </div>
+<section id="products" class="products-two-row-style">
+  <div class="section-container">
+    <div class="lab-products-header">
+      <h2>LABORATORY</h2>
+      <h3>MULTESTING TOWNSTATE</h3>
+    </div>
 
-        <div class="products-two-row-container">
-          <!-- First Row -->
-          <div class="product-row">
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Analytical Equipment</span>
-              </div>
-            </div>
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Laboratory Equipment</span>
-              </div>
-            </div>
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Medical Equipment</span>
-              </div>
-            </div>
+    <div class="products-two-row-container">
+      <!-- First Row -->
+      <div class="product-row">
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/pexels-photo-3938022.webp"
+              alt="Analytical Equipment"
+              class="circle-image"
+            />
+            <span class="product-name">Analytical Equipment</span>
           </div>
-
-          <!-- Second Row -->
-          <div class="product-row">
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Petroleum Testing</span>
-              </div>
-            </div>
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Pharmaceutical Machinery</span>
-              </div>
-            </div>
-            <div class="product-circle">
-              <div class="circle-content">
-                <span class="product-name">Testing Equipment</span>
-              </div>
-            </div>
+        </div>
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/laboratory-supplies-medical-work.jpg"
+              alt="Laboratory Equipment"
+              class="circle-image"
+            />
+            <span class="product-name">Laboratory Equipment</span>
+          </div>
+        </div>
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/pexels-ivan-samkov-9628826.jpg"
+              alt="Medical Equipment"
+              class="circle-image"
+            />
+            <span class="product-name">Medical Equipment</span>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- Second Row -->
+      <div class="product-row">
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/laboratory-glassware-arrangement-high-angle_23-2149481707.jpg"
+              alt="Petroleum Testing"
+              class="circle-image"
+            />
+            <span class="product-name">Petroleum Testing</span>
+          </div>
+        </div>
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/pexels-photo-287237.jpeg"
+              alt="Pharmaceutical Machinery"
+              class="circle-image"
+            />
+            <span class="product-name">Pharmaceutical Machinery</span>
+          </div>
+        </div>
+        <div class="product-circle">
+          <div class="circle-content">
+            <img
+              src="images/testing.jpg"
+              alt="Testing Equipment"
+              class="circle-image"
+            />
+            <span class="product-name">Testing Equipment</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+/* Images inside circles */
+.circle-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.circle-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+/* Text is always visible */
+.product-name {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-weight: 700;
+  color: white;
+  font-size: 1rem;
+  z-index: 2;
+  text-shadow: 0 2px 5px rgba(0,0,0,0.7);
+  opacity: 0.8; /* visible by default */
+  transition: opacity 0.5s ease, transform 0.3s ease;
+}
+
+/* On hover, fade in stronger */
+.product-circle:hover .product-name {
+  opacity: 1;
+  transform: translateX(-50%) scale(1.05);
+}
+
+/* Section background */
+.products-two-row-style {
+  margin-top: -18px;
+  padding: 6rem 0;
+  position: relative;
+  overflow: hidden;
+  background-image: url("images/testalize-me-0jE8ynV4mis-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.products-two-row-style::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 0;
+}
+
+.section-container {
+  position: relative;
+  z-index: 1;
+}
+
+.lab-products-header {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.lab-products-header h2 {
+  font-size: 3rem;
+  color: white;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.lab-products-header h3 {
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.products-two-row-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.product-row {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  width: 100%;
+}
+
+.product-circle {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 1;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  border: 2px solid transparent;
+}
+
+.product-circle::before {
+  content: "";
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 2px dashed rgba(144, 198, 124, 0.7);
+  opacity: 0;
+  transition: all 0.4s ease;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.product-circle:hover {
+  transform: scale(1.15);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+  background: #90c67c;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.product-circle:hover::before {
+  opacity: 1;
+  animation: spin 12s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  .product-row {
+    gap: 2.5rem;
+  }
+  .product-circle {
+    width: 200px;
+    height: 200px;
+  }
+  .product-circle::before {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+@media (max-width: 992px) {
+  .product-row {
+    gap: 2rem;
+  }
+  .product-circle {
+    width: 160px;
+    height: 160px;
+  }
+  .product-circle::before {
+    width: 180px;
+    height: 180px;
+  }
+  .product-name {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .product-row {
+    gap: 1.5rem;
+  }
+  .product-circle {
+    width: 140px;
+    height: 140px;
+  }
+  .product-circle::before {
+    width: 160px;
+    height: 160px;
+  }
+  .product-name {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .products-two-row-container {
+    gap: 1rem;
+  }
+  .product-row {
+    gap: 1rem;
+  }
+  .product-circle {
+    width: 110px;
+    height: 110px;
+  }
+  .product-circle::before {
+    width: 130px;
+    height: 130px;
+  }
+  .product-name {
+    font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .product-row {
+    gap: 0.5rem;
+  }
+  .product-circle {
+    width: 90px;
+    height: 90px;
+  }
+  .product-circle::before {
+    width: 110px;
+    height: 110px;
+  }
+  .product-name {
+    font-size: 0.6rem;
+  }
+}
+</style>
+
 
     <!-- our services-->
     <section class="portfolio" id="portfolio">
@@ -1427,271 +1707,6 @@
         </p>
       </div>
     </section>
-
-    <style>
-      /* Two Row Products Section with Background */
-      .products-two-row-style {
-        margin-top: -18px;
-        padding: 6rem 0;
-        position: relative;
-        overflow: hidden;
-        background-image: url("images/testalize-me-0jE8ynV4mis-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-      }
-
-      .products-two-row-style::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.7);
-        z-index: 0;
-      }
-
-      .section-container {
-        position: relative;
-        z-index: 1;
-      }
-
-      .lab-products-header {
-        text-align: center;
-        margin-bottom: 4rem;
-      }
-
-      .lab-products-header h2 {
-        font-size: 3rem;
-        color: white;
-        margin-bottom: 0.5rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-      }
-
-      .lab-products-header h3 {
-        font-size: 1.5rem;
-        color: white;
-        font-weight: 400;
-        letter-spacing: 1px;
-      }
-
-      .products-two-row-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .product-row {
-        display: flex;
-        justify-content: center;
-        gap: 3rem;
-        width: 100%;
-      }
-
-      .product-circle {
-        width: 160px;
-        height: 160px;
-        border-radius: 50%;
-        background: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
-        position: relative;
-        z-index: 1;
-        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        border: 2px solid transparent;
-      }
-
-      .product-circle::before {
-        content: "";
-        position: absolute;
-        width: 180px;
-        height: 180px;
-        border-radius: 50%;
-        border: 2px dashed rgba(144, 198, 124, 0.7);
-        opacity: 0;
-        transition: all 0.4s ease;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-
-      .product-circle:hover {
-        transform: scale(1.15);
-        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
-        background: #90c67c;
-        border-color: rgba(255, 255, 255, 0.3);
-      }
-
-      .product-circle:hover::before {
-        opacity: 1;
-        animation: spin 12s linear infinite;
-      }
-
-      .circle-content {
-        text-align: center;
-        position: relative;
-        z-index: 2;
-        padding: 1.5rem;
-      }
-
-      .product-name {
-        font-weight: 600;
-        color: #333;
-        font-size: 1.1rem;
-        transition: all 0.3s ease;
-      }
-
-      .product-circle:hover .product-name {
-        color: white;
-        transform: scale(1.05);
-      }
-
-      .circle-hover {
-        position: absolute;
-        bottom: -60px;
-        left: 50%;
-        transform: translateX(-50%) translateY(15px);
-        width: 200px;
-        background: rgba(51, 51, 51, 0.95);
-        color: white;
-        padding: 0.8rem;
-        border-radius: 8px;
-        font-size: 0.9rem;
-        opacity: 0;
-        transition: all 0.4s ease;
-        pointer-events: none;
-        z-index: 10;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      .product-circle:hover .circle-hover {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-      }
-
-      @keyframes spin {
-        from {
-          transform: translate(-50%, -50%) rotate(0deg);
-        }
-        to {
-          transform: translate(-50%, -50%) rotate(360deg);
-        }
-      }
-
-      /* Responsive adjustments */
-      @media (max-width: 1200px) {
-        .product-row {
-          gap: 2.5rem;
-        }
-        .product-circle {
-          width: 150px;
-          height: 150px;
-        }
-        .product-circle::before {
-          width: 170px;
-          height: 170px;
-        }
-      }
-
-      @media (max-width: 992px) {
-        .product-row {
-          gap: 2rem;
-        }
-        .product-circle {
-          width: 140px;
-          height: 140px;
-        }
-        .product-circle::before {
-          width: 160px;
-          height: 160px;
-        }
-        .product-name {
-          font-size: 1rem;
-        }
-      }
-
-      @media (max-width: 768px) {
-        .product-row {
-          gap: 1.5rem;
-        }
-        .product-circle {
-          width: 120px;
-          height: 120px;
-        }
-        .product-circle::before {
-          width: 140px;
-          height: 140px;
-        }
-        .product-name {
-          font-size: 0.9rem;
-        }
-        .circle-hover {
-          width: 180px;
-          font-size: 0.8rem;
-          bottom: -50px;
-        }
-      }
-
-      @media (max-width: 576px) {
-        .products-two-row-container {
-          gap: 1rem;
-        }
-        .product-row {
-          gap: 1rem;
-        }
-        .product-circle {
-          width: 100px;
-          height: 100px;
-        }
-        .product-circle::before {
-          width: 120px;
-          height: 120px;
-        }
-        .product-name {
-          font-size: 0.8rem;
-        }
-        .circle-hover {
-          width: 150px;
-          font-size: 0.7rem;
-          bottom: -40px;
-        }
-        .lab-products-header h2 {
-          font-size: 2.2rem;
-        }
-        .lab-products-header h3 {
-          font-size: 1.2rem;
-        }
-      }
-
-      @media (max-width: 400px) {
-        .product-row {
-          gap: 0.5rem;
-        }
-        .product-circle {
-          width: 85px;
-          height: 85px;
-        }
-        .product-circle::before {
-          width: 105px;
-          height: 105px;
-        }
-        .product-name {
-          font-size: 0.7rem;
-        }
-        .circle-hover {
-          width: 130px;
-        }
-      }
-    </style>
 
     <!-- Careers Section -->
     <section id="careers" class="careers">
@@ -2407,9 +2422,7 @@
                 <i class="fas fa-envelope"></i> tharaka@bernatali.com
               </a>
             </li>
-            <li>
-              
-            </li>
+            <li></li>
             <li>
               <a href="tel:+1234567890">
                 <i class="fas fa-phone"></i> +94 77 180 4337
