--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
   <div class="section-container">
     <div class="lab-products-header">
       <h2>LABORATORY</h2>
-      <h3>MULTESTING TOWNSTATE</h3>
+      <h3>OUR SOLUTIONS</h3>
     </div>
 
     <div class="products-two-row-container">
