soltions font size

--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
 <section id="products" class="products-two-row-style">
   <div class="section-container">
     <div class="lab-products-header">
-      <h2>LABORATORY</h2>
+      
       <h3>OUR SOLUTIONS</h3>
     </div>
 
@@ -1524,7 +1524,7 @@
 }
 
 .lab-products-header h2 {
-  font-size: 3rem;
+  font-size: 10rem;
   color: white;
   margin-bottom: 0.5rem;
   font-weight: 700;
@@ -1533,10 +1533,12 @@
 }
 
 .lab-products-header h3 {
-  font-size: 1.5rem;
+  font-size: 4rem;
   color: white;
-  font-weight: 400;
-  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .products-two-row-container {
