--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
         z-index: 1001;
       }
 
-      @media (max-width: 768px) {
+      @media (max-width: 992px) {
         .nav-links {
-          display: none; /* Hide by default on mobile */
+          position: fixed;
+          top: 0;
+          left: -100%; /* Changed from right: -100% */
+          width: 280px;
+          height: 100vh;
+          background: var(--white);
           flex-direction: column;
-          position: absolute;
-          top: 100%;
-          left: 0;
-          transform: none;
-          background-color: white;
-          width: 100%;
-          padding: 1rem 0;
-          box-shadow: var(--shadow-md);
-          z-index: 999;
-          align-items: center;
+          align-items: flex-start;
+          padding: 6rem 2rem 2rem;
+          box-shadow: 5px 0 20px rgba(0, 0, 0, 0.1); /* Shadow on right side now */
+          transition: var(--transition);
+          z-index: 1000;
         }
 
         .nav-links.show {
@@ -1107,7 +1107,9 @@
               <li><a href="Pharmaceutical.html">Pharmaceutical Tools</a></li>
               <li><a href="Petroleum.html">Petroleum Equipment</a></li>
               <li><a href="Testing.html">Testing Equipment</a></li>
-               <li><a href="Chemical & Consumables.html">Chemical & Consumables</a></li>
+              <li>
+                <a href="Chemical & Consumables.html">Chemical & Consumables</a>
+              </li>
             </ul>
           </li>
           <li><a href="#careers">About Us</a></li>
@@ -1365,335 +1367,333 @@
     </script>
 
     <!-- Our Products Section - Two Row Layout with Background -->
-<section id="products" class="products-two-row-style">
-  <div class="section-container">
-    <div class="lab-products-header">
-      
-      <h3>OUR SOLUTIONS</h3>
-    </div>
+    <section id="products" class="products-two-row-style">
+      <div class="section-container">
+        <div class="lab-products-header">
+          <h3>OUR SOLUTIONS</h3>
+        </div>
 
-    <div class="products-two-row-container">
-      <!-- First Row -->
-      <div class="product-row">
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/pexels-photo-3938022.webp"
-              alt="Analytical Equipment"
-              class="circle-image"
-            />
-            <span class="product-name">Analytical Equipment</span>
+        <div class="products-two-row-container">
+          <!-- First Row -->
+          <div class="product-row">
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/pexels-photo-3938022.webp"
+                  alt="Analytical Equipment"
+                  class="circle-image"
+                />
+                <span class="product-name">Analytical Equipment</span>
+              </div>
+            </div>
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/pexels-tara-winstead-7722927.jpg"
+                  alt="Laboratory Equipment"
+                  class="circle-image"
+                />
+                <span class="product-name">Laboratory Equipment</span>
+              </div>
+            </div>
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/pexels-photo-287237.jpeg"
+                  alt="Medical Equipment"
+                  class="circle-image"
+                />
+                <span class="product-name">Medical Equipment</span>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/pexels-tara-winstead-7722927.jpg"
-              alt="Laboratory Equipment"
-              class="circle-image"
-            />
-            <span class="product-name">Laboratory Equipment</span>
-          </div>
-        </div>
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/pexels-photo-287237.jpeg"
-              alt="Medical Equipment"
-              class="circle-image"
-            />
-            <span class="product-name">Medical Equipment</span>
+
+          <!-- Second Row -->
+          <div class="product-row">
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/laboratory-glassware-arrangement-high-angle_23-2149481707.jpg"
+                  alt="Petroleum Testing"
+                  class="circle-image"
+                />
+                <span class="product-name">Petroleum Testing</span>
+              </div>
+            </div>
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/pharmaceutical-technician-sterile-environment-working-with-equipment-pharmacy-industry_645730-342.jpg"
+                  alt="Pharmaceutical Machinery"
+                  class="circle-image"
+                />
+                <span class="product-name">Pharmaceutical Machinery</span>
+              </div>
+            </div>
+            <div class="product-circle">
+              <div class="circle-content">
+                <img
+                  src="images/testing.jpg"
+                  alt="Testing Equipment"
+                  class="circle-image"
+                />
+                <span class="product-name">Testing Equipment</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <!-- Second Row -->
-      <div class="product-row">
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/laboratory-glassware-arrangement-high-angle_23-2149481707.jpg"
-              alt="Petroleum Testing"
-              class="circle-image"
-            />
-            <span class="product-name">Petroleum Testing</span>
-          </div>
-        </div>
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/pharmaceutical-technician-sterile-environment-working-with-equipment-pharmacy-industry_645730-342.jpg"
-              alt="Pharmaceutical Machinery"
-              class="circle-image"
-            />
-            <span class="product-name">Pharmaceutical Machinery</span>
-          </div>
-        </div>
-        <div class="product-circle">
-          <div class="circle-content">
-            <img
-              src="images/testing.jpg"
-              alt="Testing Equipment"
-              class="circle-image"
-            />
-            <span class="product-name">Testing Equipment</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    <style>
+      /* Images inside circles */
+      .circle-image {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
 
-<style>
-/* Images inside circles */
-.circle-image {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
+      .circle-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        overflow: hidden;
+      }
 
-.circle-content {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  overflow: hidden;
-}
+      /* Text is always visible */
+      .product-name {
+        position: absolute;
+        bottom: 15px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-weight: 700;
+        color: white;
+        font-size: 1rem;
+        z-index: 2;
+        text-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+        opacity: 0.8; /* visible by default */
+        transition: opacity 0.5s ease, transform 0.3s ease;
+      }
 
-/* Text is always visible */
-.product-name {
-  position: absolute;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-weight: 700;
-  color: white;
-  font-size: 1rem;
-  z-index: 2;
-  text-shadow: 0 2px 5px rgba(0,0,0,0.7);
-  opacity: 0.8; /* visible by default */
-  transition: opacity 0.5s ease, transform 0.3s ease;
-}
+      /* On hover, fade in stronger */
+      .product-circle:hover .product-name {
+        opacity: 1;
+        transform: translateX(-50%) scale(1.05);
+      }
 
-/* On hover, fade in stronger */
-.product-circle:hover .product-name {
-  opacity: 1;
-  transform: translateX(-50%) scale(1.05);
-}
+      /* Section background */
+      .products-two-row-style {
+        margin-top: -18px;
+        padding: 6rem 0;
+        position: relative;
+        overflow: hidden;
+        background-image: url("images/testalize-me-0jE8ynV4mis-unsplash.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+      }
 
-/* Section background */
-.products-two-row-style {
-  margin-top: -18px;
-  padding: 6rem 0;
-  position: relative;
-  overflow: hidden;
-  background-image: url("images/testalize-me-0jE8ynV4mis-unsplash.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-}
+      .products-two-row-style::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 0;
+      }
 
-.products-two-row-style::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 0;
-}
+      .section-container {
+        position: relative;
+        z-index: 1;
+      }
 
-.section-container {
-  position: relative;
-  z-index: 1;
-}
+      .lab-products-header {
+        text-align: center;
+        margin-bottom: 4rem;
+      }
 
-.lab-products-header {
-  text-align: center;
-  margin-bottom: 4rem;
-}
+      .lab-products-header h2 {
+        font-size: 10rem;
+        color: white;
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
 
-.lab-products-header h2 {
-  font-size: 10rem;
-  color: white;
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
+      .lab-products-header h3 {
+        font-size: 4rem;
+        color: white;
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
 
-.lab-products-header h3 {
-  font-size: 4rem;
-  color: white;
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
+      .products-two-row-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4rem;
+        max-width: 1200px;
+        margin: 0 auto;
+      }
 
-.products-two-row-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 4rem;
-  max-width: 1200px;
-  margin: 0 auto;
-}
+      .product-row {
+        display: flex;
+        justify-content: center;
+        gap: 3rem;
+        width: 100%;
+      }
 
-.product-row {
-  display: flex;
-  justify-content: center;
-  gap: 3rem;
-  width: 100%;
-}
+      .product-circle {
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+        position: relative;
+        z-index: 1;
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: 2px solid transparent;
+      }
 
-.product-circle {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
-  position: relative;
-  z-index: 1;
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  border: 2px solid transparent;
-}
+      .product-circle::before {
+        content: "";
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        border: 2px dashed rgba(144, 198, 124, 0.7);
+        opacity: 0;
+        transition: all 0.4s ease;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 
-.product-circle::before {
-  content: "";
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  border: 2px dashed rgba(144, 198, 124, 0.7);
-  opacity: 0;
-  transition: all 0.4s ease;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+      .product-circle:hover {
+        transform: scale(1.15);
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+        background: #90c67c;
+        border-color: rgba(255, 255, 255, 0.3);
+      }
 
-.product-circle:hover {
-  transform: scale(1.15);
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
-  background: #90c67c;
-  border-color: rgba(255, 255, 255, 0.3);
-}
+      .product-circle:hover::before {
+        opacity: 1;
+        animation: spin 12s linear infinite;
+      }
 
-.product-circle:hover::before {
-  opacity: 1;
-  animation: spin 12s linear infinite;
-}
+      @keyframes spin {
+        from {
+          transform: translate(-50%, -50%) rotate(0deg);
+        }
+        to {
+          transform: translate(-50%, -50%) rotate(360deg);
+        }
+      }
 
-@keyframes spin {
-  from {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
-  }
-}
+      /* Responsive adjustments */
+      @media (max-width: 1200px) {
+        .product-row {
+          gap: 2.5rem;
+        }
+        .product-circle {
+          width: 200px;
+          height: 200px;
+        }
+        .product-circle::before {
+          width: 220px;
+          height: 220px;
+        }
+      }
 
-/* Responsive adjustments */
-@media (max-width: 1200px) {
-  .product-row {
-    gap: 2.5rem;
-  }
-  .product-circle {
-    width: 200px;
-    height: 200px;
-  }
-  .product-circle::before {
-    width: 220px;
-    height: 220px;
-  }
-}
+      @media (max-width: 992px) {
+        .product-row {
+          gap: 2rem;
+        }
+        .product-circle {
+          width: 160px;
+          height: 160px;
+        }
+        .product-circle::before {
+          width: 180px;
+          height: 180px;
+        }
+        .product-name {
+          font-size: 0.9rem;
+        }
+      }
 
-@media (max-width: 992px) {
-  .product-row {
-    gap: 2rem;
-  }
-  .product-circle {
-    width: 160px;
-    height: 160px;
-  }
-  .product-circle::before {
-    width: 180px;
-    height: 180px;
-  }
-  .product-name {
-    font-size: 0.9rem;
-  }
-}
+      @media (max-width: 768px) {
+        .product-row {
+          gap: 1.5rem;
+        }
+        .product-circle {
+          width: 140px;
+          height: 140px;
+        }
+        .product-circle::before {
+          width: 160px;
+          height: 160px;
+        }
+        .product-name {
+          font-size: 0.8rem;
+        }
+      }
 
-@media (max-width: 768px) {
-  .product-row {
-    gap: 1.5rem;
-  }
-  .product-circle {
-    width: 140px;
-    height: 140px;
-  }
-  .product-circle::before {
-    width: 160px;
-    height: 160px;
-  }
-  .product-name {
-    font-size: 0.8rem;
-  }
-}
+      @media (max-width: 576px) {
+        .products-two-row-container {
+          gap: 1rem;
+        }
+        .product-row {
+          gap: 1rem;
+        }
+        .product-circle {
+          width: 110px;
+          height: 110px;
+        }
+        .product-circle::before {
+          width: 130px;
+          height: 130px;
+        }
+        .product-name {
+          font-size: 0.7rem;
+        }
+      }
 
-@media (max-width: 576px) {
-  .products-two-row-container {
-    gap: 1rem;
-  }
-  .product-row {
-    gap: 1rem;
-  }
-  .product-circle {
-    width: 110px;
-    height: 110px;
-  }
-  .product-circle::before {
-    width: 130px;
-    height: 130px;
-  }
-  .product-name {
-    font-size: 0.7rem;
-  }
-}
-
-@media (max-width: 400px) {
-  .product-row {
-    gap: 0.5rem;
-  }
-  .product-circle {
-    width: 90px;
-    height: 90px;
-  }
-  .product-circle::before {
-    width: 110px;
-    height: 110px;
-  }
-  .product-name {
-    font-size: 0.6rem;
-  }
-}
-</style>
-
+      @media (max-width: 400px) {
+        .product-row {
+          gap: 0.5rem;
+        }
+        .product-circle {
+          width: 90px;
+          height: 90px;
+        }
+        .product-circle::before {
+          width: 110px;
+          height: 110px;
+        }
+        .product-name {
+          font-size: 0.6rem;
+        }
+      }
+    </style>
 
     <!-- our services-->
     <section class="portfolio" id="portfolio">
